# move-spec-testing

./: Cargo.toml  README.md
.github/workflows/: check-and-lint.yml  run-tests.yml
docs/: How-to-use.md
move-mutation-test/: Cargo.toml  README.md
move-mutation-test/src/: cli.rs  lib.rs  main.rs  mutation_test.rs
move-mutation-test/tests/: integration_tests.rs
move-mutator/: Cargo.toml  README.md
move-mutator/doc/: design.md
move-mutator/src/: cli.rs  compiler.rs  configuration.rs  coverage.rs  lib.rs  main.rs  mutate.rs  operator.rs  output.rs  report.rs
move-mutator/src/operators/: binary.rs
move-mutator/tests/: basic_tests.rs
move-mutator/tests/move-assets/simple/: report.txt.mutation-exp
move-mutator/tests/move-assets/simple/sources/: BinaryReplacement.move  Sum.move
move-spec-test/: Cargo.toml  README.md
move-spec-test/src/: cli.rs  lib.rs  main.rs
mutator-common/: Cargo.toml
mutator-common/src/: benchmark.rs  display_report.rs  lib.rs  report.rs  tmp_package_dir.rs
