[package]
name = "move-mutator"
version = "0.1.0"
description = "Move mutation tool"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-mutator"
path = "src/main.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
codespan = { workspace = true }
codespan-reporting = { workspace = true }
diffy = { workspace = true }
either = { workspace = true }
fixed = { workspace = true }
fs_extra = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
move-compiler-v2 = { workspace = true }
move-coverage = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
move-symbol-pool = { workspace = true }
mutator-common = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
termcolor = { workspace = true }
toml = { workspace = true }
