[package]
name = "move-spec-test"
version = "0.1.0"
description = "Move specification testing tool"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "move-spec-test"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
move-model = { workspace = true }
move-mutator = { workspace = true }
move-package = { workspace = true }
move-prover = { workspace = true }
mutator-common = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
termcolor = { workspace = true }
